--- a/CRUD/WebProject/package.json
+++ b/CRUD/WebProject/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^8.19.3",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "popper.js": "^1.16.1"
